--- a/assets/style.css
+++ b/assets/style.css
@@ -1,68 +1,77 @@
 div{
 display: flex;
 justify-content: center;
-
 } 
 
 h1,h2 {
   text-align: center;
+  color: #008CBA;
 }
 
 form{
-  background-color: #ddd;
+  background-color: lightblue;
   width: 100%;
+  border: 1px solid#008CBA;
+  border-radius: 10px;
 }
 
 label{
-  width:70%;
+  width:50%;
   padding: 12px 20px ;
-  margin: 8px 0;
+  margin: 8px 8px;
   font-size:18px;
+  color: #008CBA;
 }
-
 
  table{
   width: 50%;
   border-collapse: collapse;
+  border-radius: 10px;
 }
 
 table.list{
   width:100%;
 }
-
-td, th {
-  border: 1px solid #dddddd;
+th {
+  background-color: lightblue;
+  text-align: center;
+  padding: 8px;
+  color:#008CBA;
+  font-size: 18px;
+}
+td {
   text-align: center;
   padding: 8px;
 }
 tr:nth-child(even),table.list thead>tr {
-  background-color: #dddddd;
+  background-color: lightblue;
+
 }
 
-input[type=text], input[type=number] {
-  width: 90%;
-  padding: 12px 20px ;
-  margin: 8px ;
+input[type=text], input[type=number]{
+  width: 100%;
+  padding: 12px 20px;
+  margin: 9px 30px;
   display: inline-block;
-  border: 1px solid #ccc;
+  border: 1px solid #008CBA;
   border-radius: 4px;
   box-sizing: border-box;
   font-size:15px;
 }
 
-
 input[type=submit]{
-  display: grid;
-  transition-duration: 0.4s;
-  width: 20%;
+  display: inline-block;
+  width: 100%;
   background-color:white;
-  color: black;
+  color: #008CBA;
   border: 1px solid #008CBA;
   padding: 12px 20px;
-  margin: 8px 8px 8px 80%;
+  margin: 9px 30px;
   border-radius: 4px;
   cursor: pointer;
   font-size: 15px;
+  box-sizing: border-box;
+
 }
 
 input[type=submit]:hover{
@@ -70,12 +79,10 @@ input[type=submit]:hover{
   color: white;
 }
 
-
-
 a{
   cursor: pointer;
   text-decoration: underline;
-  color: #0000ee;
+  color: #008CBA;
   margin-right: 4px;
 }
 
