--- a/assets/style.css
+++ b/assets/style.css
@@ -49,7 +49,7 @@ tr:nth-child(even),table.list thead>tr {
 }
 
 input[type=text], input[type=number]{
-  width: 100%;
+  width: 118%;
   padding: 12px 20px;
   margin: 9px 30px;
   display: inline-block;
@@ -60,23 +60,23 @@ input[type=text], input[type=number]{
 }
 
 input[type=submit]{
-  display: inline-block;
-  width: 100%;
-  background-color:white;
-  color: #008CBA;
+  width: 62%;
+  background-color:#008CBA;
+  color: white;
   border: 1px solid #008CBA;
-  padding: 12px 20px;
-  margin: 9px 30px;
+  padding: 12px ;
+  margin: 9px 0 15px 255px ;
   border-radius: 4px;
   cursor: pointer;
   font-size: 15px;
   box-sizing: border-box;
 
+
 }
 
 input[type=submit]:hover{
-  background-color:#008CBA;
-  color: white;
+  background-color:white;
+  color: #008CBA;
 }
 
 a{
