--- a/assets/style.css
+++ b/assets/style.css
@@ -19,7 +19,7 @@ label{
   width:50%;
   padding: 12px 20px ;
   margin: 8px 8px;
-  font-size:18px;
+  font-size:16px;
   color: #008CBA;
 }
 
@@ -49,7 +49,7 @@ tr:nth-child(even),table.list thead>tr {
 }
 
 input[type=text], input[type=number]{
-  width: 118%;
+  width: 100%;
   padding: 12px 20px;
   margin: 9px 30px;
   display: inline-block;
@@ -60,12 +60,12 @@ input[type=text], input[type=number]{
 }
 
 input[type=submit]{
-  width: 62%;
+  width: 100%;
   background-color:#008CBA;
   color: white;
   border: 1px solid #008CBA;
-  padding: 12px ;
-  margin: 9px 0 15px 255px ;
+  padding: 12px 20px;
+  margin: 9px 30px;
   border-radius: 4px;
   cursor: pointer;
   font-size: 15px;
