--- a/assets/style.css
+++ b/assets/style.css
@@ -1,91 +1,98 @@
 div{
-display: flex;
-justify-content: center;
-
-} 
-
-h1,h2 {
-  text-align: center;
-}
-
-form{
-  background-color: #ddd;
-  width: 100%;
-}
-
-label{
-  width:70%;
-  padding: 12px 20px ;
-  margin: 8px 0;
-  font-size:18px;
-}
-
-
- table{
-  width: 50%;
-  border-collapse: collapse;
-}
-
-table.list{
-  width:100%;
-}
-
-td, th {
-  border: 1px solid #dddddd;
-  text-align: center;
-  padding: 8px;
-}
-tr:nth-child(even),table.list thead>tr {
-  background-color: #dddddd;
-}
-
-input[type=text], input[type=number] {
-  width: 90%;
-  padding: 12px 20px ;
-  margin: 8px ;
-  display: inline-block;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  box-sizing: border-box;
-  font-size:15px;
-}
-
-
-input[type=submit]{
-  display: grid;
-  transition-duration: 0.4s;
-  width: 20%;
-  background-color:white;
-  color: black;
-  border: 1px solid #008CBA;
-  padding: 12px 20px;
-  margin: 8px 8px 8px 80%;
-  border-radius: 4px;
-  cursor: pointer;
-  font-size: 15px;
-}
-
-input[type=submit]:hover{
-  background-color:#008CBA;
-  color: white;
-}
-
-
-
-a{
-  cursor: pointer;
-  text-decoration: underline;
-  color: #0000ee;
-  margin-right: 4px;
-}
-
-label.validation-error{
-  color:   red;
-  font-size: 15px;
-  text-align: left;
-  margin: 8px 5px;
-}
-
-.hide{
-  display:none;
-}
+  display: flex;
+  justify-content: center;
+  } 
+  
+  h1,h2 {
+    text-align: center;
+    color: #008CBA;
+  }
+  
+  form{
+    background-color: lightblue;
+    width: 100%;
+    border: 1px solid#008CBA;
+    border-radius: 10px;
+  }
+  
+  label{
+    width:50%;
+    padding: 12px 20px ;
+    margin: 8px 8px;
+    font-size:16px;
+    color: #008CBA;
+  }
+  
+   table{
+    width: 50%;
+    border-collapse: collapse;
+    border-radius: 10px;
+  }
+  
+  table.list{
+    width:100%;
+  }
+  th {
+    background-color: lightblue;
+    text-align: center;
+    padding: 8px;
+    color:#008CBA;
+    font-size: 18px;
+  }
+  td {
+    text-align: center;
+    padding: 8px;
+  }
+  tr:nth-child(even),table.list thead>tr {
+    background-color: lightblue;
+  
+  }
+  
+  input[type=text], input[type=number]{
+    width: 100%;
+    padding: 12px 20px;
+    margin: 9px 30px;
+    display: inline-block;
+    border: 1px solid #008CBA;
+    border-radius: 4px;
+    box-sizing: border-box;
+    font-size:15px;
+  }
+  
+  input[type=submit]{
+    width: 100%;
+    background-color:#008CBA;
+    color: white;
+    border: 1px solid #008CBA;
+    padding: 12px 20px;
+    margin: 9px 30px;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 15px;
+    box-sizing: border-box;
+  
+  
+  }
+  
+  input[type=submit]:hover{
+    background-color:white;
+    color: #008CBA;
+  }
+  
+  a{
+    cursor: pointer;
+    text-decoration: underline;
+    color: #008CBA;
+    margin-right: 4px;
+  }
+  
+  label.validation-error{
+    color:   red;
+    font-size: 15px;
+    text-align: left;
+    margin: 8px 5px;
+  }
+  
+  .hide{
+    display:none;
+  }
