--- a/assets/style.css
+++ b/assets/style.css
@@ -142,6 +142,13 @@ label.validation-error {
   text-align: center;
   border-radius: 10px;
 }
+.modal-content p {
+  font-size: 15px;
+  font-family: 'Arial', sans-serif;
+  color: #333;
+  text-align: start;
+  margin: 13px;
+}
 
 .close {
   color: #aaa;
