--- a/assets/style.css
+++ b/assets/style.css
@@ -1,102 +1,192 @@
-div{
+div {
   display: flex;
   justify-content: center;
-  
-  } 
-  
-  h1,h2 {
-    text-align: center;
-  }
-  
-  form{
-    background-color: rgb(155, 210, 244);
-    width: 100%;
-    border-radius: 5px;
-    margin: 70px 0 0 0 ;
-  }
-  
-  label{
-    width:70%;
-    padding: 12px 20px ;
-    margin: 8px;
-    font-size:18px;
-  }
-  
-  
-   table{
-    width: 50%;
-    border-collapse: collapse;
-    border-radius: 5px;
-    overflow: hidden;
-    border-spacing: 0;
-  }
-  
-  table.list{
-    width:100%;
-  }
-  
-  td, th {
-    border: 1px;
-    text-align: center;
-    padding: 8px;
+  align-items: center;
 
-  }
+}
 
-  
-  tr:nth-child(even),table.list thead>tr {
-    background-color: rgb(155, 210, 244);
-  }
-  
-  input[type=text], input[type=number] {
-    width: 90%;
-    padding: 12px 20px ;
-    margin: 8px 30px;
-    display: inline-block;
-    border: 1px solid white;
-    border-radius: 4px;
-    box-sizing: border-box;
-    font-size:15px;
-  }
-  
-  
-  input[type=submit]{
-    display: grid;
-    width: 20%;
-    background-color:white;
-    color: rgb(0, 183, 255);
-    padding: 12px 0;
-    margin: 8px 28px 8px 80%;
-    border: 1px solid rgb(0, 183, 255);
-    border-radius: 4px;
-    cursor: pointer;
-    font-size: 15px;
-  }
+h1,
+h2 {
+  text-align: center;
+  font-family: 'Arial', sans-serif;
+  color: #333;
+}
 
-  input[type=submit]:hover{
-    background-color:rgb(36, 160, 237);
-    color:white;
+form {
+  background-color: #f0f8ff;
+  width: 100%;
+  max-width: 700px;
+  border-radius: 10px;
+  padding: 20px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  margin: 70px 0 0 0;
+}
 
-  }
-  
-  a{
-    cursor: pointer;
-    text-decoration: none;
-    color: rgb(51,102,204);
-    margin-right: 4px;
-  }
-  a:hover{
-    text-decoration: underline;
-  }
+label {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  font-size: 18px;
+  font-family: 'Arial', sans-serif;
+  color: #333;
+}
+
+table {
+  width: 100%;
+  max-width: 700px;
+  border-collapse: collapse;
+  border-radius: 10px;
+  overflow: hidden;
+  border-spacing: 0;
+  margin-top: 20px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+
+}
+
+table.list {
+  width: 100%;
+}
+
+td,
+th {
+  border: 1px solid #ddd;
+  /* Changed border color */
+  text-align: center;
+  padding: 12px;
+  font-family: 'Arial', sans-serif;
+  color: #333;
+}
+
+tr:nth-child(even),
+table.list thead>tr {
+  background-color: #f0f8ff;
+}
+
+input[type=text],
+input[type=number] {
+  width: calc(100% - 60px);
+  padding: 12px 20px;
+  margin: 8px 30px;
+  display: inline-block;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  box-sizing: border-box;
+  font-size: 15px;
+  font-family: 'Arial', sans-serif;
+  color: #333;
+}
+
+input[type=submit] {
+  display: block;
+  width: 100%;
+  max-width: 200px;
+  background-color: #00b7ff;
+  color: white;
+  padding: 12px 0;
+  margin: 20px auto;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 15px;
+  font-family: 'Arial', sans-serif;
+}
+
+input[type=submit]:hover {
+  background-color: #0099cc;
+}
+
+a {
+  cursor: pointer;
+  text-decoration: none;
+  color: #3366cc;
+  margin-right: 4px;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+label.validation-error {
+  color: red;
+  font-size: 15px;
+  text-align: left;
+  margin: 8px 5px;
+}
+
+.hide {
+  display: none;
+}
 
 
-  
-  label.validation-error{
-    color:   red;
-    font-size: 15px;
-    text-align: left;
-    margin: 8px 5px;
+/* Modal styles */
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+  max-width: 400px;
+  text-align: center;
+  border-radius: 10px;
+}
+.modal-content p {
+  font-size: 15px;
+  font-family: 'Arial', sans-serif;
+  color: #333;
+  text-align: start;
+  margin: 13px;
+}
+
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+button {
+  margin: 10px;
+  padding: 10px 20px;
+  font-size: 16px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+#confirmDelete {
+  background-color: #d9534f;
+  color: white;
+
+  &:hover {
+    background-color: #f55d57;
   }
-  
-  .hide{
-    display:none;
+}
+
+#cancelDelete {
+  background-color: #5bc0de;
+  color: white;
+
+  &:hover {
+    background-color: #61cdee;
   }
+}
